chore: use product id instead of product variant id
