# src/modules/wishlist/models/wishlist-item.ts
@@ -4,12 +4,12 @@ import Wishlist from './wishlist'
 const WishlistItem = model
 	.define('wishlist_item', {
 		id: model.id({prefix: 'wli'}).primaryKey(),
-		product_variant_id: model.text(),
+		product_id: model.text(),
 		wishlist: model.belongsTo(() => Wishlist, {mappedBy: 'items'})
 	})
 	.indexes([
 		{
-			on: ['product_variant_id', 'wishlist_id'],
+			on: ['product_id', 'wishlist_id'],
 			unique: true,
 			where: 'deleted_at IS NULL'
 		}
